--- a/css/light.css
+++ b/css/light.css
@@ -1,5 +1,13 @@
+body{
+    margin:0;
+    padding: 0;
+    font-family: 'Radio Canada', sans-serif;
+    background-color: rgb(228, 230, 255);
+}
 legend{
     text-align: center;
+    font-weight: bold;
+    color: #002241;
 }
 fieldset{
     display: flex;
@@ -7,20 +15,120 @@ fieldset{
     text-align: center;
     align-items: center;
     width: 40%;
+    border-radius: 30px;
+    border-color: #a4d5ff;
 }
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
   -webkit-appearance: none;
 }
-
+button{
+    width: 90px;
+    border-radius: 12px;
+    border: none;
+    padding: 6px 7px;
+    font-weight: bold;
+    background-color: rgb(134, 200, 255);
+    color: rgb(37, 36, 107);
+    box-shadow: 1px 1px 3px rgba(0, 56, 82, 0.726);
+    margin-top: 20px;
+    cursor: pointer;
+}
+button:focus:not(.pausar){
+    color:rgb(0, 110, 255);
+    background-color: rgb(134, 200, 255);
+    box-shadow: 1px 1px 12px rgb(0, 119, 255);
+}
 input{
-    margin: 0.5rem 0;
+    margin: 0 0;
     text-align: center;
+    box-shadow: 1px 1px 3px rgba(0, 56, 82, 0.726);
+    border:none;
+    cursor: pointer;
+}
+input:focus{
+    box-shadow: none;
+    cursor: text;
+}
+button:hover,input:hover{
+    box-shadow: 1px 1px 3px rgba(0, 56, 82, 0.185);
+    transition: all 100ms;
+}
+label{
+    margin: 12px 0px 0px 0px;
 }
 .Contenedortempo{
     display: flex;
     flex-direction: column;
+    position:absolute;
+    background-color: rgb(228, 230, 255);
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
 }
-button{
-    width: 90px;
+.start{
+    position:absolute;
+    z-index: 20;
+    background-color: rgb(228, 230, 255);
+    width: 100%;
+    height: 100%;
+    display: flex;/*Temp. to flex*/
+    align-items: center;
+    justify-content: center;
+}
+time{
+    font-size: 70px;
+    font-family: 'Azeret Mono', monospace;
+    color: #002241;
+}
+.alert{
+    text-align: center;
+    z-index: 30;
+    position: absolute;
+    width: 100%;
+    height: 50px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    color: #ffffff;
+    font-weight: bold;
+    background-color: rgb(255, 88, 88);
+}
+.detener{
+    margin-left: 20px;
+}
+.fadeOut{
+    opacity: 0;
+    animation: fadeOut 500ms ease;
+}
+.fadeIn{
+    opacity: 1;
+    animation: fadeIn 500ms ease;
+}
+.finished{
+    animation: finished 1500ms ease infinite;
+}
+
+@media all and (max-width:500px) {
+    time{
+        font-size: 50px;
+    }
+    input{
+        width: 100px;
+    }
+}
+
+@keyframes fadeOut {
+    0%{opacity: 1;}
+    100%{opacity: 0;}
+}
+@keyframes fadeIn {
+    0%{opacity: 0;}
+    100%{opacity:1}
+}
+@keyframes finished{
+    0%{background-color: rgb(228, 230, 255);}
+    50%{background-color: #ffb2a4;}
+    100%{background-color: rgb(228, 230, 255);}
 }
